fixed accordion so it doesn't overflow on mobile?

--- a/style.css
+++ b/style.css
@@ -247,9 +247,7 @@ div.container{
   display: none;
   overflow: hidden;
   text-align: left;
-  /* max-width: 500px;
-  min-width: 300px; */
-  width: 500px;
+  width: 300px;
 }
 
 #recipe{
